# QGraphicsSvgItem-render-issue

./: CMakeLists.txt  Makefile  README.md  main.cpp
